--- a/Flagrum.Web/Layout/PatchNotes.razor
+++ b/Flagrum.Web/Layout/PatchNotes.razor
@@ -1,6 +1,15 @@
 ﻿<h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
 
 <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+    <h4 class="text-grey-300 mb-4">Flagrum 1.1.12</h4>
+    <h5 class="text-grey-300 mb-4">Bug Fixes</h5>
+    <ul class="list-disc ml-6 mb-6">
+        <li>Fixed bug where environment rotations were sometimes incorrect on some systems</li>
+        <li>Fixed bug where Environment Exporter would sometimes crash Flagrum on some systems</li>
+    </ul>
+</div>
+
+<div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
     <h4 class="text-grey-300 mb-4">Flagrum 1.1.11</h4>
     <h5 class="text-grey-300 mb-4">Minor Improvements</h5>
     <ul class="list-disc ml-6 mb-6">
