--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -8,7 +8,7 @@
         <MenuItem Icon="apps" Text="Mod Library" DefaultActive="true" Uri="/"/>
         <MenuItem Icon="videogame_asset" Text="Asset Explorer" Uri="/assets"/>
         @* <MenuItem Icon="folder_zip" Text="EARC Mods" Uri="/earc"/> *@
-        <MenuItem Icon="share" Text="Sequence Editor" Uri="/sequenceeditor"></MenuItem>
+        <MenuItem Icon="share" Text="Node Editor" Uri="/node"></MenuItem>
         <div class="flex-grow"></div>
         <MenuItem Icon="menu_book" Text="Tutorials" Uri="/tutorials"/>
         <MenuItem Icon="map" Text="Roadmap" Uri="/roadmap"/>
@@ -28,7 +28,7 @@
     </HeaderView>
     <BodyView>
         <div class="h-full p-6 scrollbar-light" style="max-height: 100%; overflow-y: auto">
-            <PatchNotes Version="@Version" />
+            <PatchNotes Version="@Version"/>
         </div>
     </BodyView>
 </Modal>
