--- a/Flagrum.Web/Layout/PatchNotes.razor
+++ b/Flagrum.Web/Layout/PatchNotes.razor
@@ -1,6 +1,23 @@
 ﻿<h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
 
 <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+    <h4 class="text-grey-300 mb-4">Flagrum 1.1.13</h4>
+    <h5 class="text-grey-300 mb-4">Asset Explorer</h5>
+    <ul class="list-disc ml-6 mb-6">
+        <li>Clickable link to EARC location now displayed above preview when a file is selected</li>
+        <li>Selecting a gmdl.gfxbin file now displays material locations for each mesh</li>
+        <li>Updated Environment Exporter/Importer to setup nodes for UV scaling</li>
+    </ul>
+    <h5 class="text-grey-300 mb-4">Bug Fixes</h5>
+    <ul class="list-disc ml-6 mb-6">
+        <li>Fixed bug where paths were not showing in the information window for custom presets</li>
+        <li>Fixed bug where cloning a default preset would clone a custom preset instead</li>
+        <li>Fixed bug where environment models without certain tags would fail to export</li>
+        <li>Fixed bug where a couple of very rare materials would fail to read</li>
+    </ul>
+</div>
+
+<div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
     <h4 class="text-grey-300 mb-4">Flagrum 1.1.12</h4>
     <h5 class="text-grey-300 mb-4">Bug Fixes</h5>
     <ul class="list-disc ml-6 mb-6">
