--- a/Flagrum.Web/Features/AssetExplorer/Index.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Index.razor
@@ -62,7 +62,15 @@
             </div>
         }
         <div class="flex-grow bg-dark border-t border-b border-dark-550 row py-2 px-3">
-            <strong class="flex-grow font-display">@(SelectedItem == null ? "No File Selected" : AssetExplorerItem.GetDisplayName(SelectedItem.Name, AssetExplorerItem.GetType(SelectedItem.Uri ?? SelectedItem.Name)))</strong>
+            @if (SelectedItem == null)
+            {
+                <strong class="flex-grow font-display">No File Selected</strong>
+            }
+            else
+            {
+                var relativePath = Context.GetArchiveRelativeLocationByUri(SelectedItem.Uri);
+                <Hyperlink Uri="@($@"{Settings.GameDataDirectory}\{relativePath[..relativePath.LastIndexOf('\\')]}")" Text="@relativePath" />
+            }
         </div>
     </div>
 
