--- a/Flagrum.Web/Layout/TypeTreeComponent.razor
+++ b/Flagrum.Web/Layout/TypeTreeComponent.razor
@@ -48,17 +48,17 @@
 
     private void OnClick()
     {
-        if (TypeTree.Children.Count() > 0)
-        {
-            TypeTree.IsCollapsed = !TypeTree.IsCollapsed;
-        }
-        else
-        {
-            if (TypeTree.Type == typeof(SequenceTray))
-            {
-                var group = new StandardGroup();
-                Diagram.AddGroup(group);
-            }
-        }
+        // if (TypeTree.Children.Count() > 0)
+        // {
+        //     TypeTree.IsCollapsed = !TypeTree.IsCollapsed;
+        // }
+        // else
+        // {
+        //     if (TypeTree.Type == typeof(SequenceTray))
+        //     {
+        //         var group = new StandardGroup();
+        //         Diagram.AddGroup(group);
+        //     }
+        // }
     }
 }
